@@ -4,6 +4,7 @@
 	- fix: "/path/foo.../bar" was losing a dot (#123844).
 	- fix: PIE executables have basename-as-soname provides (#123697).
 	- lua embedded in rpmio.
+	- use lua to identify desired selinux file context regexes.
 
 4.3 -> 4.3.1:
 	- fix: don't add leading space to %* argv expansion (#119059).
